# Android-IDE

./: .gitignore  DEBUG_LOG.md  QA_WORKFLOW.md  README.md  Report.md  STATUS_TRACKER.md  TECH_STACK_MIGRATION.md
.github/workflows/: build-debug.yml  build-release.yml  build.yml
android-ide/: .gitignore  Cargo.toml  build.rs
android-ide/.cargo/: config.toml
android-ide/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android-ide/android/app/: build.gradle.kts
android-ide/android/app/src/main/: AndroidManifest.xml
android-ide/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android-ide/android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
android-ide/android/app/src/main/res/values/: colors.xml
android-ide/android/assets/editor/: index.html  monaco-init.js
android-ide/android/gradle/wrapper/: gradle-wrapper.properties
android-ide/android/java/dev/androidide/: EditorBridge.java  IDEActivity.java  MainActivity.kt  SafBridge.java
android-ide/android/java/dev/androidide/data/: CrashRecoveryRepository.kt  EditorSettingsRepository.kt  ProjectRepository.kt  SessionRepository.kt  ThemeRepository.kt
android-ide/android/java/dev/androidide/data/model/: AppTheme.kt  EditorSettings.kt  PreviewLayout.kt  Project.kt  RecoveryEntry.kt  VolumeKeyMode.kt
android-ide/android/java/dev/androidide/editor/: EditorBridge.kt  EditorMessage.kt
android-ide/android/java/dev/androidide/saf/: SafRepository.kt
android-ide/android/java/dev/androidide/ui/: AppRoot.kt  IdeScreen.kt
android-ide/android/java/dev/androidide/ui/components/: EditorPane.kt  EditorTabBar.kt  FileTreePanel.kt  IdeStatusBar.kt
android-ide/android/java/dev/androidide/ui/screen/: ProjectsScreen.kt  SettingsScreen.kt
android-ide/android/java/dev/androidide/ui/theme/: Color.kt  Theme.kt  Type.kt
android-ide/android/java/dev/androidide/viewmodel/: IdeViewModel.kt
android-ide/android/java/dev/androidide/viewmodel/model/: AppScreen.kt  EditorTab.kt  FileNode.kt  FileOpDialog.kt  FileSearchResult.kt  IdeUiState.kt
android-ide/modules/documentation/: Cargo.toml
android-ide/modules/documentation/src/: error.rs  lib.rs
android-ide/modules/editor/: Cargo.toml  README.md
android-ide/modules/editor/src/: bridge.rs  error.rs  lib.rs  manager.rs  tab.rs  webview.rs
android-ide/modules/extensions/: Cargo.toml
android-ide/modules/extensions/src/: error.rs  lib.rs
android-ide/modules/filesystem/: Cargo.toml  README.md
android-ide/modules/filesystem/src/: error.rs  lib.rs  manager.rs  path.rs  saf.rs  tree.rs
android-ide/modules/git/: Cargo.toml
android-ide/modules/git/src/: error.rs  lib.rs
android-ide/modules/linux-runtime/: Cargo.toml
android-ide/modules/linux-runtime/src/: error.rs  lib.rs
android-ide/modules/lsp/: Cargo.toml
android-ide/modules/lsp/src/: error.rs  lib.rs
android-ide/modules/settings/: Cargo.toml  README.md
android-ide/modules/settings/src/: android.rs  error.rs  lib.rs  manager.rs  schema.rs
android-ide/modules/terminal/: Cargo.toml
android-ide/modules/terminal/src/: error.rs  lib.rs
android-ide/scripts/: fetch-monaco.sh
android-ide/src/: error.rs  lib.rs  main.rs  ui.rs
android-ide/ui/: main.slint
android-ide/ui/components/: dialogs.slint  file_tree.slint
