[workspace]
members = [
    "modules/editor",
    "modules/filesystem",
    "modules/terminal",
    "modules/linux-runtime",
    "modules/git",
    "modules/lsp",
    "modules/extensions",
    "modules/settings",
    "modules/documentation",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Error handling
thiserror = "1"
anyhow = "1"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Android JNI bindings
jni = "0.21"
# Git
git2 = "0.19"

[package]
name = "android-ide"
version = "0.1.0"
edition = "2021"
description = "Production-grade Android IDE — Rust + Slint"

[[bin]]
name = "android-ide"
path = "src/main.rs"

[lib]
name = "android_ide_lib"
path = "src/lib.rs"
# cdylib for the Android .so; rlib for the desktop binary that links the lib.
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
# Modules
android-ide-filesystem = { path = "modules/filesystem" }
android-ide-editor    = { path = "modules/editor" }
android-ide-settings  = { path = "modules/settings" }

# ---------------------------------------------------------------------------
# Desktop-only dependencies (Linux / macOS / Windows)
# ---------------------------------------------------------------------------
# Slint 1.16.1 with the winit backend for X11/Wayland/Metal/WGL.
# "backend-winit" is required for desktop and does NOT compile for Android.
[target.'cfg(not(target_os = "android"))'.dependencies]
slint = { version = "1.16.1", features = ["backend-winit"] }

# ---------------------------------------------------------------------------
# Android-only dependencies
# ---------------------------------------------------------------------------
# Slint 1.16.1 with the android-activity 0.6 backend (stable in Slint 1.10+,
# production-ready since 1.16). "backend-android-activity-06" replaces the
# old placeholder comment that incorrectly referenced 1.8's non-existent
# "backend-android-activity" feature.
#
# android-activity provides the NativeActivity entry point (android_main) and
# the AndroidApp handle used by slint::android::init().
#
# Justification for "native-activity" feature:
#   NativeActivity is the simplest Activity type that works with Slint's
#   Android backend — no custom Java Activity class needed.
[target.'cfg(target_os = "android")'.dependencies]
slint            = { version = "1.16.1", features = ["backend-android-activity-06"] }
android-activity = { version = "0.6", features = ["native-activity"] }
jni              = { workspace = true }
android_logger   = "0.14"

[build-dependencies]
# slint-build must match the slint runtime version exactly.
# Compiles .slint UI files into Rust at build time.
slint-build = "1.16.1"
