[package]
name = "android-ide-editor"
version = "0.1.0"
edition = "2021"
description = "Editor module — Monaco WebView integration, tab management, file lifecycle"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
# uuid: used for generating collision-free tab IDs (UUID v4, cryptographically random).
# Justification: the previous SystemTime-based stub could produce duplicate IDs when
# two tabs were opened within the same nanosecond. uuid crate uses OS entropy (/dev/urandom
# on Android) and is collision-proof in practice. See modules/editor/README.md.
uuid = { workspace = true }
android-ide-filesystem = { path = "../filesystem" }
android-ide-settings   = { path = "../settings" }

[target.'cfg(not(target_os = "android"))'.dependencies]
# wry: cross-platform webview crate used to host the Monaco editor on desktop.
# Justification: the only mature Rust binding for OS-native webviews
# (WebKit2GTK on Linux, WKWebView on macOS, WebView2 on Windows).
# Enables the same HTML/JS Monaco shell on both desktop and Android.
wry = "0.46"
raw-window-handle = "0.6"

[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true }
