[package]
name = "android-ide-filesystem"
version = "0.1.0"
edition = "2021"
description = "Filesystem module — Android SAF bridge, directory tree, file CRUD"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true }
