[package]
name = "android-ide-lsp"
version = "0.1.0"
edition = "2021"
description = "LSP module — language server lifecycle, JSON-RPC, diagnostics, completion"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
android-ide-linux-runtime = { path = "../linux-runtime" }
android-ide-filesystem = { path = "../filesystem" }
