[package]
name = "android-ide-terminal"
version = "0.1.0"
edition = "2021"
description = "Terminal module — PTY management, terminal emulator UI, session management"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
android-ide-linux-runtime = { path = "../linux-runtime" }
